--- a/src/Components/Dashbaord/dashboard.css
+++ b/src/Components/Dashbaord/dashboard.css
@@ -2,6 +2,13 @@
   background-image: url(/src/asset/Dashboard-Background-Image-4.jpg);
   height: 100%;
 }
+.carousel-inner {
+  position: relative;
+  width: 100%;
+  height: 300px;
+  overflow: hidden;
+}
+
 
 .crouselImg {
   width: 99% !important;
@@ -109,28 +116,59 @@
   margin: 23px;
   display: grid;
   justify-items: center;
+  /* justify-content: space-around; */
   /* grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr; */
-  grid-template-columns: repeat(auto-fit, minmax(217px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+  
 }
 
 .dash_courseCard {
-  border-radius: 10px;
+   border-radius: 10px;
   height: 307px;
   width: 217px;
   display: flex;
   align-items: center;
   flex-direction: column;
-  justify-content: space-around;
-  margin: 20px 6px 20px 6px;
   background-color: white;
-  padding: 10px;
-  position: relative;
+  overflow: hidden;
+  border: 1px solid rgb(155, 147, 147);
+  margin-bottom: 20px; 
+
+
+
+
 }
+
+
+
 .dash_courseCard:hover {
+}
+.imageArea1 {
+  /* height: 164px; */
+  transform: scale(1);
+  transition: transform 0.5s ease;
+}
+.imageArea1:hover{
+  transform: scale(1.2);
+}
+.imageArea1{
+  bottom: 0px !important;
 }
 
 .imageArea {
   height: 164px;
+  transform: scale(1);
+  transition: transform 0.5s ease;
+}
+.overflow1{
+  overflow: hidden;
+  margin-bottom: 20px !important;
+}
+.imageArea:hover{
+  transform: scale(1.2);
+}
+.imageArea{
+  bottom: 1px solid black;
 }
 
 .dashboardFooter_hide {
@@ -140,13 +178,43 @@
 
 @media (max-width: 500px) {
   .middle_row2 {
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
   }
 
   .dash_course {
     margin: 15px;
     display: grid;
     /* grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr; */
-    /* grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); */
+    /* grid-template-columns: repeat(auto-fit, minmax(260px, 1fr)) !important; */
   }
 }
+
+.loader {
+  /* border: 3px solid #f3f3f3; */
+  border-top: 3px solid #ffffff;
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  animation: spin 1s linear infinite;
+  /* margin-right: 5px; */
+margin-left: 5px;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.enrollButtonNow{
+  background-color: rgb(62, 24, 233);
+  border-radius: 5px;
+  color: white;
+  width: 100px;
+  height: 33px;
+  border: none;
+}
+
