--- a/src/Components/Login_signUp/login_signUp.css
+++ b/src/Components/Login_signUp/login_signUp.css
@@ -266,3 +266,13 @@ form .form-content label:hover {
   height: 1px;
  
 }
+.error-message{
+  color: #E42A2A;
+  font-size: 13px;
+  /* max-width: 50%; */
+  width: 200px;
+
+}
+.google-logout{
+  bottom: 0;
+}
