--- a/src/Components/Navbar/nav.css
+++ b/src/Components/Navbar/nav.css
@@ -74,6 +74,7 @@ header {
 .navbar .link {
   display: flex;
   gap: 2rem;
+  margin-bottom: 0px !important;
 }
 
 .navbar .toggle_btn {
@@ -161,3 +162,4 @@ header {
     width: unset;
   }
 }
+
