--- a/src/Components/Tools/MiniHeader.css
+++ b/src/Components/Tools/MiniHeader.css
@@ -12,7 +12,7 @@
   height: 100%;
  
 } */
-.background-picture{
+.background-picture {
   /* background-image: url("/src/asset/Dashboard-Background-Image-4.jpg");
   height: 100%; */
   /* background-repeat: no-repeat;
@@ -24,7 +24,7 @@
   position: relative;
   z-index: inherit;
   width: auto;
-  height: 7.6875rem;
+  height: 6.6875rem;
   background-color: #dbd8d8;
   padding: 0 1.875rem;
   text-align: left;
@@ -33,9 +33,9 @@
   justify-content: space-between;
   /* margin-top: 2%; */
   /* box-shadow: 10px 1px 1px rgb(94, 93, 93); */
-  box-shadow: 0px 17px 12px -15px #111; 
+  box-shadow: 0px 17px 12px -15px #111;
 }
-.body-scroll{
+.body-scroll {
   /* height: 34vw; */
   height: 464px;
   overflow-y: auto;
@@ -49,15 +49,14 @@
     font-weight: 400; */
   font-weight: 400;
   font-size: 25px;
-  margin-top: 3%;
- 
+  margin-top: 2.5%;
 }
 .close {
   font-size: 600;
   text-align: center;
   margin-top: 3%;
- 
 }
+
 .base-header2 {
   width: 100%;
   height: 2.6875rem;
@@ -68,7 +67,7 @@
   display: flex;
   justify-content: space-between;
   margin-top: 2%;
- 
+  cursor: pointer;
 }
 .base-heading2 {
   /* max-width: none;
@@ -81,7 +80,6 @@
   /* font-size: 25px; */
   font-weight: 600;
   /* overflow-y:auto ; */
- 
 }
 /* .base-heading3{
   width: 30px;
@@ -90,32 +88,62 @@
   font-size: 600;
   text-align: center;
   margin-top: 5px;
- 
 }
+
+
+
 .base-header-1 {
   display: flex;
   /* justify-content: space-around; */
 
   /* width: 80%; */
+}
+.tooltip {
+  position: relative;
+  display: inline-block;
  
+}
+
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: 280px;
+  background-color: #690000;
+  color: white;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+  position: absolute;
+  z-index: 1;
+  top: -5px;
+  right: 150%;
+}
+
+.tooltip .tooltiptext::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 100%;
+  margin-top: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: transparent transparent transparent #690000;
+}
+.tooltip:hover .tooltiptext {
+  visibility: visible;
 }
 .base-heading2-1 {
   margin-left: 10px;
- 
 }
 .base-heading2-2 {
   margin-left: 10px;
- 
 }
 .create-courses {
   display: flex;
- 
 }
 .courses {
   padding: 0 1.875rem;
   margin-top: 2%;
   font-weight: 600;
- 
 }
 .box1 {
   /* margin: 10px 0 0 0 ; */
@@ -137,61 +165,54 @@
   margin-right: 20px;
   margin-top: 4%;
   margin-bottom: 4%;
- 
 }
-.warning{
-    margin-left: 10px;
-    letter-spacing: 1px;
-    font-size: 14px;
-    margin-top: 4px;
-   
+.warning {
+  margin-left: 10px;
+  letter-spacing: 1px;
+  font-size: 14px;
+  margin-top: 4px;
 }
-.general{
-margin-left: 15px;
-margin-top: 2%;
-/* font-family: sans-serif; */
+.general {
+  margin-left: 15px;
+  margin-top: 2%;
+  /* font-family: sans-serif; */
 }
-.h-line{
-    font-size: 140%;
-    line-height: 1;
-    text-align: right;
-    width: 1.5em;
-    display: inline-block;
-    width: 0;
-    overflow: hidden;
-    opacity: 0;
-    margin-left: -18px;
-   
+.h-line {
+  font-size: 140%;
+  line-height: 1;
+  text-align: right;
+  width: 1.5em;
+  display: inline-block;
+  width: 0;
+  overflow: hidden;
+  opacity: 0;
+  margin-left: -18px;
 }
-.name-course{
-    margin-left: 30px;
-    letter-spacing: 1px;
-    font-size: 14px;
-    margin-top: 4%;
-    /* font-family: sans-serif !important; */
+.name-course {
+  margin-left: 30px;
+  letter-spacing: 1px;
+  font-size: 14px;
+  margin-top: 4%;
+  /* font-family: sans-serif !important; */
 }
-.real-form{
+.real-form {
   display: flex;
   /* flex-direction: column; */
   margin-top: 2%;
- 
 }
-.input-text1{
+.input-text1 {
   width: 30vw;
   letter-spacing: 2px;
-  height: 1.rem;
+  height: 1rem;
   background: none;
   border: 1px solid grey;
   border-radius: 5px;
- 
-
 }
-.form-field2{
+.form-field2 {
   margin-left: 9px;
   margin-right: 3px;
- 
 }
-.input-desc{
+.input-desc {
   letter-spacing: 1px;
   width: 26vw;
   background: none;
@@ -199,40 +220,33 @@ margin-top: 2%;
   border-radius: 5px;
   /* font-family: sans-serif !important; */
 }
-/* .input-text1{
+.input-text1 {
   width: 350px;
   height: 32px;
-} */
-.input-text-multiple{
-  width: auto;
 }
-.form-field1{
+.form-field1 {
   height: 35px;
   outline: none;
-
 }
-.real-form{
+.real-form {
   display: flex;
   width: 44%;
   justify-content: space-between;
   /* align-items: center; */
 }
-.input-text3{
-  width: 100px;
+.input-text3 {
+  width: 350 px;
   height: 32px;
 }
 
-.input-text3{
+.input-text3 {
   width: 26vw;
   letter-spacing: 2px;
-  height: 1.rem;
+  height: 2rem;
   background: none;
   border: 1px solid grey;
   border-radius: 5px;
- 
-
 }
-.tab2{
+.tab2 {
   margin-top: 2%;
 }
-
