--- a/src/Components/Dashbaord/ImageSlider.css
+++ b/src/Components/Dashbaord/ImageSlider.css
@@ -14,11 +14,11 @@
     transition: transform 0.9s ease-in-out;
   }
   
-  .slide {
+  .slidee {
     flex: 0 0 100%;
   }
   
-  .slide img {
+  .slidee img {
     width: 100% !important;
     height: 60vh;
     border: 1px solid rgb(161, 155, 155);
