--- a/src/Components/Navbar/nav.css
+++ b/src/Components/Navbar/nav.css
@@ -13,7 +13,7 @@ body {
   position: sticky;
   top: 0;
   transition: all 0.4s;
-  z-index: 999999;
+  z-index: 100;
 }
 
 .navHide {
@@ -52,13 +52,14 @@ a {
 
 header {
   position: relative;
-  padding: 0 2rem;
+  /* padding: 0 2rem; */
 }
 
 .navbar {
   width: 100%;
   height: 70px;
-  max-width: 1200px;
+  /* max-width: 1200px; */
+  padding: 0 30px ;
   margin: 0 auto;
   /* margin-top: 10px; */
   display: flex;
