--- a/src/Components/Tools/MiniHeader.css
+++ b/src/Components/Tools/MiniHeader.css
@@ -20,37 +20,13 @@
   height: 100%;
   margin-top: 0; */
 }
-.base-header {
-  position: relative;
-  z-index: inherit;
-  width: auto;
-  height: 6.6875rem;
-  background-color: #dbd8d8;
-  padding: 0 1.875rem;
-  text-align: left;
-  border-bottom: 1px solid #cdcdcd;
-  display: flex;
-  justify-content: space-between;
-  /* margin-top: 2%; */
-  /* box-shadow: 10px 1px 1px rgb(94, 93, 93); */
-  box-shadow: 0px 17px 12px -15px #111;
-}
+
 .body-scroll {
   /* height: 34vw; */
-  height: 464px;
+  /* height: 464px; */
   overflow-y: auto;
 }
-.base-heading {
-  /* max-width: none;
-    margin: 0 !important;
-    color: #262626;
-    font-family:sans-serif;
-    font-size: 1.875rem;
-    font-weight: 400; */
-  font-weight: 400;
-  font-size: 25px;
-  margin-top: 2.5%;
-}
+
 .close {
   font-size: 600;
   text-align: center;
@@ -249,4 +225,11 @@
 }
 .tab2 {
   margin-top: 2%;
+}
+.duration-1{
+  margin-right: 15px;
+}
+.duration-2{
+  margin-right: 15px;
+  margin-left: 9px;
 }
