--- a/src/Components/Dashbaord/ImageSlider.css
+++ b/src/Components/Dashbaord/ImageSlider.css
@@ -4,7 +4,7 @@
     align-items: center;
   }
   
-  .slider {
+  .sliderr {
     display: flex;
     overflow: hidden;
   }
@@ -26,7 +26,7 @@
     /* box-shadow: 0px 17px 12px -15px #111;  */
   }
 
-  .slider{
+  .sliderr{
     box-shadow: 0px 17px 12px -15px #111;
   }
   
