--- a/src/Components/Dashbaord/ViewContent.css
+++ b/src/Components/Dashbaord/ViewContent.css
@@ -1,3 +1,7 @@
+*{
+  font-family: 'Poppins', sans-serif !important;
+}
+
 .content-view{
   background-color: rgb(245, 238, 238);
   width: 100%;
@@ -59,6 +63,9 @@
  
   box-shadow: 1px 1px 10px 5px rgba(0, 0, 0, 0.2);
 
+}
+.main-header-view{
+  background-color: white !important;
 }
 .mini-header-view-heading{
   margin-left: 30px;
@@ -136,12 +143,16 @@
 
 }
 .summary-view{
-  margin-left:55px;
+  /* margin-left:55px; */
   margin-top: 20px;
+  color: black;
+  font-weight: 600;
+  font-size: 30px;
+  
 }
 .header6{
   color: #555770 !important;
-  margin-left:55px;
+  /* margin-left:55px; */
   
  
   margin-top: 20px
@@ -287,7 +298,7 @@ margin-right: 10px;
 
 
 }
-.fa {
+/* .fa {
 padding: 20px;
 font-size: 30px;
 width: 100px;
@@ -337,7 +348,7 @@ background-color: #690000;
 flex-direction: column;
 justify-content: center;
 align-items: center;
-}
+} */
 .heading-view-books3{
 font-size: 200;
 /* display: flex;
@@ -346,4 +357,10 @@ font-size: 21px;
 font-weight: 600;
 margin-right: 10px;
 color: white;
+}
+.show-video{
+  width: 100%;
+}
+td{
+  color: black;
 }
