--- a/src/Components/Navbar/nav.css
+++ b/src/Components/Navbar/nav.css
@@ -40,6 +40,7 @@ a {
   align-items: center;
   justify-content: center;
   transition: all 0.5s;
+  font-family: 'Poppins', sans-serif !important;
 }
 
 .navBtn:hover {
@@ -96,6 +97,7 @@ header {
   font-weight: bold;
   cursor: pointer;
   transition: all 0.4s;
+  font-family: 'Poppins', sans-serif !important;
   /* transform: scale(1.5) */
 }
 
