--- a/src/Components/Tools/AddDocs.css
+++ b/src/Components/Tools/AddDocs.css
@@ -1,3 +1,7 @@
+
+*{
+    font-family: 'Poppins', sans-serif !important;
+}
 .add-docs {
     padding: 40px 0;
     width: 1100px;
@@ -20,6 +24,16 @@
 
 .add-docs-btn {
     padding: 8px 18px;
+    background-color: black;
+    color: white;
+    transition: all 0.4s;
+
+}
+.add-docs-btn:hover{
+    background-color: white;
+    color: black;
+    border-radius: 10px;
+
 }
 
 .add-docs-input {
