--- a/src/Components/Tools/AddVideo.css
+++ b/src/Components/Tools/AddVideo.css
@@ -19,7 +19,16 @@
 }
 
 .add-video-btn {
-    padding: 8px 18px;
+    background-color: black;
+    color: white;
+    transition: all 0.4s;
+
+}
+.add-video-btn:hover{
+    background-color: white;
+    color: black;
+    border-radius: 10px;
+
 }
 
 .add-video-input {
