--- a/src/Components/Tools/MiniHeader.css
+++ b/src/Components/Tools/MiniHeader.css
@@ -1,3 +1,7 @@
+*{
+  font-family: 'Poppins', sans-serif !important;
+}
+
 .body-nav {
   background-image: url("/src/asset/Dashboard-Background-Image-4.jpg");
   background-repeat: no-repeat;
@@ -183,6 +187,7 @@
   background: none;
   border: 1px solid grey;
   border-radius: 5px;
+  outline: none;
 }
 .form-field2 {
   margin-left: 9px;
@@ -194,6 +199,7 @@
   background: none;
   border: 1px solid grey;
   border-radius: 5px;
+  outline: none;
   /* font-family: sans-serif !important; */
 }
 .input-text1 {
@@ -232,4 +238,38 @@
 .duration-2{
   margin-right: 15px;
   margin-left: 9px;
+}
+.submit-first{
+  background-color: #000000;
+  color: white;
+  box-shadow: 0px 17px 12px -15px #111;
+  width: 300px;
+  height: 50px;
+  float: right;
+  border-radius: 5px;
+  margin-right: 20px;
+
+}
+.submit-first:hover{
+  border: 1px solid green;
+  background-color: white;
+  color: black;
+}
+.warning-shine{
+  color: white;
+  font-weight: 600;
+  font-size: 20px;
+}
+.sure-button{
+  margin-right: 2px;
+  color: #FFFFFF;
+  font: 16px sans-serif;
+  background-color: #690000;
+  padding: 6px 12px;
+  border: none;
+  border-radius: 0.37rem;
+  margin-left: 5px;
+}
+.modal-butoons{
+  float: right;
 }
