--- a/src/Components/Tools/MiniHeader.css
+++ b/src/Components/Tools/MiniHeader.css
@@ -29,7 +29,15 @@ h1{
 #description{
 	font-size: 24px;
 }
-
+.cancel{
+  margin-right: 2px;
+  color: #FFFFFF;
+  font: 16px sans-serif;
+  background-color: #333333;
+  padding: 6px 12px;
+  border: none;
+  border-radius: 0.37rem;
+}
 .form-wrap{
 	background: rgba(255,255,255,1);
 	width: 100%;
