--- a/src/Components/Navbar/nav.css
+++ b/src/Components/Navbar/nav.css
@@ -39,8 +39,12 @@ a {
   justify-content: center;
   transition: all 0.5s;
   font-family: 'Poppins', sans-serif !important;
+  cursor: pointer;
 }
-
+.faqbtn{
+  color: white;
+  font-weight: 100
+}
 .navBtn:hover {
   background-color: #ae0000;
 }
