--- a/src/Components/Admin/Announcement/AnnouncementTamplate.css
+++ b/src/Components/Admin/Announcement/AnnouncementTamplate.css
@@ -215,20 +215,19 @@
   }
   
   .container-right {
-    /* background-color: rgb(121, 115, 115); */
+
     width: 75%;
-    /* height: 200px; */
+
     display: flex;
-    /* justify-content: flex-start; */
-    /* justify-content: center; */
-    /* text-align: center; */
-    /* align-items: center; */
+
     flex-direction: column;
     border-radius: 30px;
-    background-color: white;
+
+    background: linear-gradient(to bottom, #ffffff 0%, #e4b49c 100%);
     margin-left: 40px;
     justify-content: center;
     align-items: center;
+    box-shadow: 0px 17px 12px -15px #111;
   }
   .container-right-inner{
     display: flex;
@@ -238,7 +237,12 @@
   }
   .announcement-headline{
     /* font-size: min(24px, 4vw); */
-    font-size: max(24px, 2vh);
+    /* font-size: max(24px, 2vh); */
+    /* font-size: 24px; */
+  }
+  .dynamic-heading{
+    font-size: 20px;
+    color: #680000;
   }
   
   .announcement-here {
