--- a/src/Components/FAQs/FAQs.css
+++ b/src/Components/FAQs/FAQs.css
@@ -10,9 +10,9 @@
   font-size: 15px;
 }
 
-.active, .collapsible:hover {
+/* .active, .collapsible:hover {
   background-color: #555;
-}
+} */
 
 .collapsible:after {
   content: '\002B';
@@ -22,9 +22,9 @@
   margin-left: 5px;
 }
 
-.active:after {
+/* .active:after {
   content: "\2212";
-}
+} */
 
 .content {
   padding: 0 18px;
