--- a/src/Components/Admin/Announcement/AnnouncementTamplate.css
+++ b/src/Components/Admin/Announcement/AnnouncementTamplate.css
@@ -568,7 +568,7 @@
     /* background-color: rgb(255, 254, 254); */
     /* background: linear-gradient(to right, #000000, #0f9b0f); */
     /* background: linear-gradient(to right, #fdfdfd, #63ec63); */
-    background: linear-gradient(to right, #fdfdfd, #ffa700);
+    background: linear-gradient(to bottom, #ffffff 0%, #e4b49c 100%);
     /* border: 1px solid rgb(231, 223, 223); */
     border-radius: 30px;
     padding: 20px;
@@ -663,4 +663,8 @@
     float: right;
     margin-right: 10px;
     font-weight: 600;
+  }
+  .courseAnno
+  {
+    height: 34vh;
   }
