UserAddByAdmin And Some Css

--- a/src/Components/Admin/Announcement/AddUserByAdmin/AddUser.css
+++ b/src/Components/Admin/Announcement/AddUserByAdmin/AddUser.css
@@ -1,6 +1,7 @@
 .name-flex{
     display: flex;
-    justify-content: space-between
+    justify-content: space-between;
+    margin-top: 20px;
 }
 .marginToRight{
     margin-right: 10px;
