--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,7 @@
 	  sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+	transition: width 0.3s ease;
   }
   
   code {
