--- a/src/Components/Admin/Announcement/CreateAnnouncement.css
+++ b/src/Components/Admin/Announcement/CreateAnnouncement.css
@@ -1,29 +1,24 @@
 .col-6-area {
-    width: 100%;
-  }
-  .multi-select {
-    background-color: #ecf0f4;
-  }
-  .openModal {
-      justify-content: center;
-    width: 400px;
-    height: 50px;
-    background: cadetblue;
-    color: white;
-    font-weight: 600;
-    border-radius: 10px;
-    outline: none;
-  
-    /* background-color: ; */
-  }
-  .modalParent{
-      display: flex;
-      justify-content: center;
-      width: 100%;
-  
-  }
-  .multi-option-drop{
-    height: 50px;
-    
-  }
-  
+  width: 100%;
+}
+.multi-select {
+  background-color: #ecf0f4;
+}
+.openModal {
+  justify-content: center;
+  width: 400px;
+  height: 50px;
+  background: #680000;
+  color: white;
+  font-weight: 600;
+  border-radius: 10px;
+  outline: none;
+}
+.modalParent {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+.multi-option-drop {
+  height: 50px;
+}
