--- a/src/Components/CreatePassword/CreatePassword.css
+++ b/src/Components/CreatePassword/CreatePassword.css
@@ -8,9 +8,13 @@
     overflow: auto;
     background-color: rgba(0,0,0,0.4);
     }
+    .create-heading{
+        font-weight: 600;
+    }
     
     .popup-inner {
-    background-color: white;
+    background-color: rgb(0, 0, 0);
+    color: white;
     position: absolute;
     left: 50%;
     top: 50%;
@@ -81,4 +85,13 @@
     background-color: #bfbfbf;
     color: #ffffff;
     cursor: not-allowed;
+    }
+    .footer-in-modal{
+        display: flex;
+        justify-content: flex-end;
+
+    }
+    .sure-button{
+        /* float: right;
+        display: flex; */
     }
