--- a/src/App.css
+++ b/src/App.css
@@ -37,8 +37,7 @@ theme="light" */
   }
 
   .sidebar-open-body {
-    width: calc(100% - 250px);
-    margin-left: auto;
+    overflow: hidden;
   }
   
   /* Header */
@@ -89,6 +88,19 @@ theme="light" */
   }
   
   /* Sidebar */
+  .sidebar-overlay {
+    width: 100%;
+    margin-top: 86px;
+    height: 100vh;
+    background-color: rgba(51, 51, 51, 0.4);
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 99;
+    transition: opacity 0.3s ease;
+    opacity: 0;
+    pointer-events: none;
+  }
   .sidebar {
     width: 250px;
     height: 100vh;
@@ -97,11 +109,18 @@ theme="light" */
     left: 0;
     background-color: #fff;
     z-index: 100;
+    margin-top: 86px;
     box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
-    /* transition: all 0.3s ease; */
+    transition: all 0.3s ease;
     padding: 10px 0;
     transform: translateX(-260px);
     overflow: hidden;
+    overflow-y: auto;
+  }
+
+  .sidebar-show {
+    opacity: 1;
+    pointer-events:all;
   }
   
   .sidebar-open {
