--- a/src/Components/Admin/Sidebar.css
+++ b/src/Components/Admin/Sidebar.css
@@ -5,7 +5,7 @@
     left: 0;
     right: -17px; 
     overflow-y: scroll;
-    height: 80%;
+    height: 80% !important;
 }
 .loginUser{
     color: blue;
