--- a/src/Components/Admin/AdminCourses/AdminCourses.css
+++ b/src/Components/Admin/AdminCourses/AdminCourses.css
@@ -1,70 +1,69 @@
-h1{
-    
-    text-align: center;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    font-size: 40px;
-    font-weight: 700;
-    color: #000;
+h1 {
+  text-align: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  font-size: 40px;
+  font-weight: 700;
+  color: #000;
 }
 
-#admin-dashboard{
-    padding: 20px;
+#admin-dashboard {
+  padding: 20px;
 }
-.admin-dashboard{
-    margin: 0 auto;
-    padding: 20px;
-    width: 85%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.admin-dashboard {
+  margin: 0 auto;
+  padding: 20px;
+  width: 85%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.grid-parent {
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 10px;
+  margin: 0 auto;
+  background-color: #fff;
+  width: 100%;
+  display: flex;
+  gap: 300px;
+  justify-content: center;
+  align-items: center;
+}
+.card {
+  width: 280px;
+  height: 300px;
 
+  margin-bottom: 30px;
+  padding: 20px 20px;
+  background-color: #fff;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  cursor: pointer;
+  transition: all 0.3s ease;
 }
-.grid-parent{
-    grid-template-columns: 1fr 1fr;
-    grid-gap: 10px;
-    margin: 0 auto;
-    background-color: #fff;
-    width: 100%;
-    display: flex;
-    gap: 300px;
-    justify-content: center;
-    align-items: center;
-}
-.card{
-    width: 280px;
-    height: 300px;
-    
-    margin-bottom: 30px;
-    padding: 20px 20px;
-    background-color: #fff;
-    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    cursor: pointer;
-    transition: all 0.3s ease;
-
+.card-title {
+  text-align: center !important;
 }
 .card:hover {
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-    transform: translateY(-5px);
-  }
-h3{
-    text-align: center;
-    font-size: 35px;
-    font-weight: 600;
-    
-    color: black;
-
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  transform: translateY(-5px);
 }
-h5{
-    text-align: center;
-    font-size: 20px;
-    font-weight: 600;
-    
-    color: black;
+h3 {
+  text-align: center;
+  font-size: 35px;
+  font-weight: 600;
 
+  color: black;
 }
+h5 {
+  text-align: center;
+  font-size: 20px;
+  font-weight: 600;
 
+  color: black;
+}
