--- a/public/chatbot-ui.css
+++ b/public/chatbot-ui.css
@@ -238,8 +238,8 @@ font-size: 1.1rem;
 }
 
 .btn-primary:hover {
-    background-color: #0096fe;
-    color: #fff;
+    background-color: #680000 !important;
+    color: #fff !important;
     transform: scale(1.1);
 }
 
