--- a/src/Components/Admin/AdminCourses/AdminCourses.css
+++ b/src/Components/Admin/AdminCourses/AdminCourses.css
@@ -46,6 +46,7 @@ h1 {
 }
 .card-title {
   text-align: center !important;
+  font-size: 20px;
 }
 .card:hover {
   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
