--- a/src/Components/Admin/AdminDashBoard/AdminDashBoard.css
+++ b/src/Components/Admin/AdminDashBoard/AdminDashBoard.css
@@ -1,3 +1,71 @@
+/* h1 {
+  text-align: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  font-size: 40px;
+  font-weight: 700;
+  color: #000;
+}
+
+#admin-dashboard {
+  padding: 10px;
+}
+.admin-dashboard {
+  margin: 0 auto;
+  padding: 20px;
+  width: 100% !important;
+  box-sizing: border-box;
+  overflow-x: hidden;
+}
+.grid-parent-dashboard {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  column-gap: 30px;
+  row-gap: 20px;
+  margin: 0 auto;
+  background-color: #fff;
+  width: 100%;
+}
+
+
+h3 {
+  text-align: center;
+  font-size: 35px;
+  font-weight: 600;
+
+  color: black;
+}
+
+.admin-dash-card {
+  width: 350px;
+  margin: 50px;
+  height: 350px;
+  background-color: #f2f2f2;
+  border-radius: 12px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
+  transition: all 0.3s ease;
+}
+.admin-dash-card:hover {
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  transform: translateY(-5px);
+}
+
+.card-title {
+  font-size: 24px;
+  margin-bottom: 12px;
+}
+
+.card-number {
+  font-size: 48px;
+  font-weight: bold;
+} */
+
 h1 {
   text-align: center;
   margin-top: 20px;
@@ -26,7 +94,7 @@ h1 {
   background-color: #fff;
   width: 100%;
 }
-/* .admin-dash-card {
+.admin-dash-card {
   width: 360px;
   height: 350px;
   margin-bottom: 50px;
@@ -38,7 +106,7 @@ h1 {
   flex-direction: column;
   cursor: pointer;
   transition: all 0.3s ease;
-} */
+}
 
 h3 {
   text-align: center;
@@ -48,7 +116,7 @@ h3 {
   color: black;
 }
 
-.admin-dash-card {
+/* .admin-dash-card {
   width: 350px;
   margin: 50px;
   height: 350px;
@@ -60,11 +128,11 @@ h3 {
   justify-content: center;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
   transition: all 0.3s ease;
-}
+} */
 .admin-dash-card:hover {
   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
     rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
-    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(190, 175, 175, 0.09) 0px -3px 5px;
   transform: translateY(-5px);
 }
 
