--- a/src/Components/DiscussionForum/DiscussionForum.css
+++ b/src/Components/DiscussionForum/DiscussionForum.css
@@ -12,3 +12,17 @@
 
   color: #000000;
 }
+
+.btn-newpost {
+  background-color: #1e283c;
+  padding: 10px 25px;
+  font-size: 18px;
+  border-radius: 6px;
+  color: #fff;
+  transition: all 0.3s ease;
+}
+
+.btn-newpost:hover {
+  background-color: transparent;
+  color: #1e283c;
+}
