added accurate percantage of course rating in enroll now page. showing total number of start given by student also

--- a/src/Components/Student/EnrollCourseView/EnrolledCourseContent.css
+++ b/src/Components/Student/EnrollCourseView/EnrolledCourseContent.css
@@ -64,6 +64,9 @@
   box-shadow: 1px 1px 10px 5px rgba(0, 0, 0, 0.2);
 
 }
+.main-header-view1{
+  width: 60%;
+}
 .main-header-view{
   background-color: white !important;
 }
