--- a/src/Components/Tools/MiniHeader.css
+++ b/src/Components/Tools/MiniHeader.css
@@ -103,6 +103,19 @@ h1{
 	-o-transition: all 0.3s ease-in-out;
 	transition: all 0.3s ease-in-out;
 }
+.form-control-image{
+  height: 50px;
+	background: #ecf0f4;
+	border-color: transparent;
+	padding: 0 15px;
+	font-size: 16px;
+	-webkit-transition: all 0.3s ease-in-out;
+	-moz-transition: all 0.3s ease-in-out;
+	-o-transition: all 0.3s ease-in-out;
+	transition: all 0.3s ease-in-out;
+  cursor: pointer;
+
+}
 .form-control:focus{
 	border-color: #00bcd9;
 	-webkit-box-shadow: 0px 0px 20px rgba(0, 0, 0, .1);
