removed full length API call

--- a/src/Components/Dashbaord/dashboard.css
+++ b/src/Components/Dashbaord/dashboard.css
@@ -85,7 +85,7 @@
 }
 
 #dashboardGridCard_2_1 {
-  background-image: url(/src/asset/Big-Tile-1-PhotoRoom.jpg);
+  background-image: url(/src/asset/redback1.gif);
   background-repeat: no-repeat;
   background-size: cover;
 }
