--- a/src/Components/Admin/AdminDashBoard/AdminDashBoard.css
+++ b/src/Components/Admin/AdminDashBoard/AdminDashBoard.css
@@ -129,13 +129,19 @@ h3 {
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
   transition: all 0.3s ease;
 } */
-.admin-dash-card:hover {
+/* .admin-dash-card:hover {
   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
     rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
     rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(190, 175, 175, 0.09) 0px -3px 5px;
   transform: translateY(-5px);
-}
+} */
 
+.card-wrapper {
+  display: inline-block;
+  text-decoration: none;
+  color: #000;
+  margin: 0 auto;
+}
 .card-title {
   font-size: 24px;
   margin-bottom: 12px;
