--- a/src/Components/Admin/Sidebar.css
+++ b/src/Components/Admin/Sidebar.css
@@ -6,6 +6,7 @@
     right: -17px; 
     overflow-y: scroll;
     height: 80% !important;
+    margin-bottom: 150px;
 }
 .loginUser{
     color: blue;
