--- a/src/App.css
+++ b/src/App.css
@@ -34,6 +34,7 @@ theme="light" */
 
   body {
     transition: all 0.3s ease;
+    margin-top: 90px;
   }
 
   .sidebar-open-body {
@@ -43,7 +44,8 @@ theme="light" */
   /* Header */
   .header {
     width: 100%;
-    background-color: #1e283c;
+    /* background-color: #1e283c; */
+    background: linear-gradient(to right, #000, #930606);
     padding: 8px 0;
   }
   
