--- a/src/Components/Dashbaord/ViewContent.css
+++ b/src/Components/Dashbaord/ViewContent.css
@@ -39,6 +39,8 @@
   color: white;
   font-weight: 100;
   box-shadow: 0px 17px 12px -15px #111;
+  /* margin-top: -14px; */
+
 }
 .linecolor {
   animation: marquee 10s linear infinite;
