--- a/src/Components/Spinner/Spinner.css
+++ b/src/Components/Spinner/Spinner.css
@@ -1,3 +1,17 @@
+
+.loader-wrapper {
+  width: 100dvw;
+  height: 100dvh;
+  position: fixed;
+  background-color: rgba(179, 179, 179, 0.6);
+  top: 0;
+  left: 0;
+  z-index: 200;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .loader {
     border: 10px solid #f3f3f3;
     border-top: 10px solid #1e283c;
