--- a/src/Components/Admin/AdminDashBoard/AdminDashBoard.css
+++ b/src/Components/Admin/AdminDashBoard/AdminDashBoard.css
@@ -107,7 +107,10 @@ h1 {
   cursor: pointer;
   transition: all 0.3s ease;
 }
-
+.card {
+  width: 300px !important;
+  padding: 8px !important;
+}
 h3 {
   text-align: center;
   font-size: 35px;
