--- a/src/Components/Catalog/Card.css
+++ b/src/Components/Catalog/Card.css
@@ -3,14 +3,16 @@
     display: block;
     text-decoration: none;
     color: #1e283c;
-    width: 250px;
+    width: 20%;
     height: 300px;
     overflow: hidden;
+    margin: 0 20px;
     border-radius: 4px;
     background-color: #FFF;
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
     cursor: pointer;
 }
+
 .card-image {
     width: 100%;
     height: 160px;
@@ -60,4 +62,20 @@
 }
 .btn-primary:hover {
     background-color: #040608;
+}
+
+@media screen and (max-width: 1100px){
+    .course-card{
+        width: 28%;
+    }
+}
+@media screen and (max-width: 990px){
+    .course-card{
+        width: 40%;
+    }
+}
+@media screen and (max-width: 600px){
+    .course-card{
+        width: 60%;
+    }
 }
